--- a/ui/src/main/index.html
+++ b/ui/src/main/index.html
@@ -3,14 +3,34 @@
 <head>
     <title>Rill</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="resources/lib/bootstrap/3.0.0/js/bootstrap.js" rel="stylesheet" media="screen">
-    <script type="text/javascript" data-main="js/main.js" src="js/lib/require/require.js"></script>
-    <link rel="stylesheet" type="text/css" href="resources/lib/bootstrap/3.0.0/css/bootstrap.css" />
+    <link
+        rel="stylesheet"
+        type="text/css"
+        media="screen"
+        href="resources/lib/bootstrap/3.0.0/css/bootstrap.css"
+    />
+
+    <link rel="stylesheet"
+          type="text/css"
+          media="screen"
+          href="resources/styles/application.css">
+    </link>
+
+
+
+    <script
+            type="text/javascript"
+            data-main="js/main.js"
+            src="js/lib/require/require.js">
+    </script>
 </head>
 <body>
+    <div id="rill" ng-app>
+        <div>
+            <div ng-include src="'html/navbar.html'"/>
+        </div>
 
-
-
-    <div ng-view></div>
+        <div ng-view></div>
+    </div>
 </body>
 </html>
